fix weird gaps in footer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -150,6 +150,7 @@
 	height: 50em;
   justify-content: center;
 	padding-top: 41em;
+	transform: translateY(-1px);
 	transition: background-color var(--page-transition-duration) ease;
 }
 
